# sags-client

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.in  sags-client.sln  sagscl.1  sagscl.spec.in
debian/: Makefile.am  Makefile.in  README.Debian  changelog  control  copyright  manpage.1.ex  menu  rules  sagscl.doc-base.EX
doc/: Makefile.am  Makefile.in
doc/html/: Makefile.am  Makefile.in  index.es.html  index.html
doc/tutorial-0.2es/: Makefile.am  Makefile.in  index.html
doc/tutorial-0.3es/: Makefile.am  Makefile.in  index.html
m4/: ChangeLog  Makefile.in
pixmaps/: Makefile.am  Makefile.in  sagscl.xpm
po/: ChangeLog  Makevars  POTFILES.in  es.gmo  es.po  sagscl.pot
src/: About.cpp  About.hpp  Channel.cpp  Channel.hpp  Config.cpp  Config.hpp  Console.cpp  Console.hpp  Icons.cpp  Icons.hpp  Ids.hpp  List.hpp  Login.cpp  Login.hpp  Logs.cpp  Logs.hpp  Main.cpp  Main.hpp  Makefile  Makefile.am  Makefile.in  Network.cpp  Network.hpp  Packet.cpp  Packet.hpp  Panels.cpp  Panels.hpp  Process.cpp  Process.hpp  Protocol.cpp  Protocol.hpp  Window.cpp  Window.hpp
win32/: Makefile.am  Makefile.in  Makefile.win  config.h  config.h.in  sagscl-win.vcxproj  sagscl-win.vcxproj.filters  sagscl.dev  sagscl.iss  sagscl.iss.in  sagscl.layout  sagscl_private.h  sagscl_private.rc
