## Process this file with automake to produce Makefile.in

sagscl_pixmapsdir = @PACKAGE_PIXMAPS_DIR@

sagscl_pixmaps_DATA = \
		      icon-quake1.png \
		      icon-quake2.png \
		      icon-quake3.png \
		      icon-rtcw.png   \
		      sagscl.png      \
		      sagscl.xpm

EXTRA_DIST = $(sagscl_pixmaps_DATA)
