## Process this file with automake to produce Makefile.in

sagscl_CXXFLAGS = \
		-Wall \
		-g    \
		-O2

bin_PROGRAMS = sagscl

sagscl_SOURCES = \
		 About.cpp    \
		 Console.cpp  \
		 Login.cpp    \
		 Logs.cpp     \
		 Main.cpp     \
		 Network.cpp  \
		 Packet.cpp   \
		 Protocol.cpp \
		 Window.cpp   \
		 About.hpp    \
		 Console.hpp  \
		 Ids.hpp      \
		 Login.hpp    \
		 Logs.hpp     \
		 Main.hpp     \
		 Network.hpp  \
		 Packet.hpp   \
		 Protocol.hpp \
		 Window.hpp

