## Process this file with automake to produce Makefile.in

sagscl_CXXFLAGS = \
		  -Wall \
		  -g    \
		  -O2

bin_PROGRAMS = sagscl

sagscl_SOURCES = \
		 About.cpp    \
		 About.hpp    \
		 Channel.cpp  \
		 Channel.hpp  \
		 Console.cpp  \
		 Console.hpp  \
		 Icons.cpp    \
		 Icons.hpp    \
		 Ids.hpp      \
		 List.hpp     \
		 Login.cpp    \
		 Login.hpp    \
		 Logs.cpp     \
		 Logs.hpp     \
		 Main.cpp     \
		 Main.hpp     \
		 Network.cpp  \
		 Network.hpp  \
		 Packet.cpp   \
		 Packet.hpp   \
		 Panels.cpp   \
		 Panels.hpp   \
		 Process.cpp  \
		 Process.hpp  \
		 Protocol.cpp \
		 Protocol.hpp \
		 Window.cpp   \
		 Window.hpp

